refactor(scheduler): add paste crate and refactor periodic tasks with macros
- Add paste dependency to Cargo.toml and Cargo.lock for macro concatenation
- Use paste macro to define named interval constants
- Replace conditional checks with periodic_task macro calls for cleaner, DRY code in scheduler loop

--- a/fullerene-kernel/Cargo.toml
+++ b/fullerene-kernel/Cargo.toml
@@ -34,6 +34,7 @@ volatile = { version = "0.6", default-features = false }
 pc-keyboard = { version = "0.8.0", default-features = false }
 log = { version = "0.4.28", default-features = false }
 heapless = { version = "0.8", default-features = false }
+paste = "1.0.15"
 # shell-words = "1.1"  # Cannot use in no_std kernel
 
 [features]
