--- a/flasks/Cargo.toml
+++ b/flasks/Cargo.toml
@@ -17,4 +17,4 @@ isobemak = "0.2.3"
 tempfile = "3.22.0"
 clap = { version = "4.5", features = ["derive"] }
 log = { version = "0.4.28", default-features = false }
-simple_logger = "4.0"
+env_logger = "0.10"
