perf: optimize frame range operations in bitmap allocator
- Replace sequential frame loops with bitwise u64 chunk operations in set_frame_range for improved performance
- Remove unused PeSectionHeader and EfiMemoryDescriptor structs from PE parser in petroleum crate
- Add force-frame-pointers to dev and release profiles in petroleum Cargo.toml for better profiling support

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -35,5 +35,8 @@ name = "petroleum"
 path = "src/lib.rs"
 crate-type = ["lib"]
 
+[profile.dev]
+force-frame-pointers = true
+
 [profile.release]
 force-frame-pointers = true
