chore(deps): update Rust dependencies versions and add addr2line crate
- Update bitflags from 2.9.4 to 2.10.0
- Update cc from 1.2.38 to 1.2.43
- Update cfg-if from 1.0.3 to 1.0.4
- Update clap and clap_builder from 4.5.49 to 4.5.50
- Add addr2line 0.24.2
- Update numerous other crates and remove wasi 0.14.7+wasi-0.2.4
- Bump windows-sys references from 0.61.0 to 0.61.2 where applicable

This updates the Cargo.lock with latest versions for better security and features.

--- a/petroleum/Cargo.toml
+++ b/petroleum/Cargo.toml
@@ -29,6 +29,9 @@ static_assertions = "1.1"
 log = { version = "0.4.28", default-features = false }
 paste = "1.0"
 bitfield = "0.19"
+addr2line = { version = "0.24", default-features = false }
+gimli = { version = "0.30", default-features = false }
+goblin = { version = "0.9", default-features = false }
 
 [lib]
 name = "petroleum"
