--- a/toluene/Cargo.toml
+++ b/toluene/Cargo.toml
@@ -3,15 +3,10 @@ name = "toluene"
 version = "0.1.0"
 edition = "2024"
 
-[lib]
-name = "toluene"
-path = "src/lib.rs"
-crate-type = ["rlib"]
-
 [[bin]]
 name = "toluene"
 path = "src/main.rs"
-required-features = ["binary"]
+crate-type = ["bin"]
 
 [[test]]
 name = "unit_tests"
